--- a/index.html
+++ b/index.html
@@ -2,103 +2,56 @@
 <html>
 <head>
   <title>Sam's Sarnies</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <meta name="viewport" content="width=device-width,
-initial-scale=1.0">
-
+<link href='css/bootstrap.min.css' rel='stylesheet'>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+  <div class="container">
 
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
 
   <div class='jumbotron'>
-    <div class="row">
-      <div class="col-sm-4">
-        <h1>Healthy sandwiches for your team</h1>
-      </div>
-      <div class="col-sm-4">
-        <img class="img-circle" src="images/person.jpg">
-      <img src="images/sandwich.png">
-      </div>
+<div class="row">
+  <div class="col-xs-4">
+  </div>
+  <div class="col-xs-4">
+  </div>
+  <div class="col-xs-4">
+  </div>
 
-    </div>
+  </div>
+
+    <h1>Healthy sandwiches for your team</h1>
+
+    <img src='images/sandwich.png'>
 
     <form role='form'>
       <label for="email">Find out more</label>
       <input type="text" name="email" >
-      <button type="button">Send</button>
+      <button type="submit">Send</button>
     </form>
   </div>
 
   <div id="buzz">
     <h2><small>The Buzz</small><br />What are people saying?</h2>
-    <div>
-      <img src='images/person.jpg'>
+
+  <div class="row">
+        <div class="col-sm-4">
+        <img src='images/person.jpg'>
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
     </div>
-    <div>
+    <div class="col-sm-4">
       <img src='images/person.jpg'>
       <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
       <small>Miss McAdam, CEO Workplace Analytics</small>
     </div>
-    <div>
+    <div class="col-sm-4">
       <img src='images/person.jpg'>
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
     </div>
+  </div>
+
   </div>
 
 
@@ -117,13 +70,7 @@ initial-scale=1.0">
     </div>
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript">
-  $('h1').css('color','red')
-  </script>
-  <script src="js/bootstrap.min.js">  </script>
-
-
+  </div> <!-- end of container -->
 </body>
 
 
