--- a/PinPoint.html
+++ b/PinPoint.html
@@ -1,131 +1,52 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Sam's Sarnies</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <meta name="viewport" content="width=device-width,
-initial-scale=1.0">
+<div class="quiz">
+  
+  <h2 class="quiz-question">Q1: How do you spell "Red"?</h2>
+  <ul data-quiz-question="1">
+    <li class="quiz-answer" data-quiz-answer="a">a. Red</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. Reed</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. Req</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. Sed</li>
+  </ul>
+  
+  <h2 class="quiz-question">Q2: How do you spell "Green"?</h2>
+  <ul data-quiz-question="2">
+    <li class="quiz-answer" data-quiz-answer="a">a. Greeen</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. Green</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. Gren</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. Grenn</li>
+  </ul>
+  
+  <h2 class="quiz-question">Q3: How do you spell "Blue"?</h2>
+  <ul data-quiz-question="3">
+    <li class="quiz-answer" data-quiz-answer="a">a. Bluue</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. Bluee</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. Btue</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. Blue</li>
+  </ul>
+  
+  <h2 class="quiz-question">Q4: How do you spell "HTML"?</h2>
+  <ul data-quiz-question="4">
+    <li class="quiz-answer" data-quiz-answer="a">a. MLTH</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. LMTH</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. HTML</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. HMTL</li>
+  </ul>
+  
+  <h2 class="quiz-question">Q5: How do you spell "CSS"?</h2>
+  <ul data-quiz-question="5">
+    <li class="quiz-answer" data-quiz-answer="a">a. ASS</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. CAA</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. ASA</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. CSS</li>
+  </ul>
+  
+  <h2 class="quiz-question">Q6: How do you spell "JavaScript"?</h2>
+  <ul data-quiz-question="6">
+    <li class="quiz-answer" data-quiz-answer="a">a. ScriptJava</li>
+    <li class="quiz-answer" data-quiz-answer="b">b. JavaScript</li>
+    <li class="quiz-answer" data-quiz-answer="c">c. JabaHutt</li>
+    <li class="quiz-answer" data-quiz-answer="d">d. jQuery</li>
+  </ul>
+</div>
 
-</head>
-
-<body>
-
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-  <div class='jumbotron'>
-    <div class="row">
-      <div class="col-sm-4">
-        <h1>Healthy sandwiches for your team</h1>
-      </div>
-      <div class="col-sm-4">
-        <img class="img-circle" src="images/person.jpg">
-      <img src="images/sandwich.png">
-      </div>
-
-    </div>
-
-    <form role='form'>
-      <label for="email">Find out more</label>
-      <input type="text" name="email" >
-      <button type="button">Send</button>
-    </form>
-  </div>
-
-  <div id="buzz">
-    <h2><small>The Buzz</small><br />What are people saying?</h2>
-    <div>
-      <img src='images/person.jpg'>
-      <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
-      <small>Mr Smith, Professional sandwich taster</small>
-    </div>
-    <div>
-      <img src='images/person.jpg'>
-      <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
-      <small>Miss McAdam, CEO Workplace Analytics</small>
-    </div>
-    <div>
-      <img src='images/person.jpg'>
-      <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
-    </div>
-  </div>
-
-
-
-  <div id="mission">
-    <h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>
-
-    <p>We believe that healthy workers are more productive workers.</p>
-    <p>Providing your team with a healthy lunch each day improves both motivation and morale.</p>
-    <p>We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
-
-    <div id='social-buttons'>
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
-    </div>
-  </div>
-
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript">
-  $('h1').css('color','red')
-  </script>
-  <script src="js/bootstrap.min.js">  </script>
-
-
-</body>
-
-
-<!-- Sandwich from: © Kosoff | <a href="http://www.dreamstime.com/">Dreamstime Stock Photos</a> & <a href="http://www.stockfreeimages.com/">Stock Free Images</a> -->
-</html>
+<div class="quiz-result"></div>
