--- a/PinPoint.html
+++ b/PinPoint.html
@@ -1,5 +1,5 @@
 <div class="quiz">
-  
+
   <h2 class="quiz-question">Q1: How do you spell "Red"?</h2>
   <ul data-quiz-question="1">
     <li class="quiz-answer" data-quiz-answer="a">a. Red</li>
@@ -7,7 +7,7 @@
     <li class="quiz-answer" data-quiz-answer="c">c. Req</li>
     <li class="quiz-answer" data-quiz-answer="d">d. Sed</li>
   </ul>
-  
+
   <h2 class="quiz-question">Q2: How do you spell "Green"?</h2>
   <ul data-quiz-question="2">
     <li class="quiz-answer" data-quiz-answer="a">a. Greeen</li>
@@ -15,15 +15,15 @@
     <li class="quiz-answer" data-quiz-answer="c">c. Gren</li>
     <li class="quiz-answer" data-quiz-answer="d">d. Grenn</li>
   </ul>
-  
-  <h2 class="quiz-question">Q3: How do you spell "Blue"?</h2>
+
+  <h2 class="quiz-question">Q3: How do you spell "Purple"?</h2>
   <ul data-quiz-question="3">
     <li class="quiz-answer" data-quiz-answer="a">a. Bluue</li>
     <li class="quiz-answer" data-quiz-answer="b">b. Bluee</li>
     <li class="quiz-answer" data-quiz-answer="c">c. Btue</li>
     <li class="quiz-answer" data-quiz-answer="d">d. Blue</li>
   </ul>
-  
+
   <h2 class="quiz-question">Q4: How do you spell "HTML"?</h2>
   <ul data-quiz-question="4">
     <li class="quiz-answer" data-quiz-answer="a">a. MLTH</li>
@@ -31,7 +31,7 @@
     <li class="quiz-answer" data-quiz-answer="c">c. HTML</li>
     <li class="quiz-answer" data-quiz-answer="d">d. HMTL</li>
   </ul>
-  
+
   <h2 class="quiz-question">Q5: How do you spell "CSS"?</h2>
   <ul data-quiz-question="5">
     <li class="quiz-answer" data-quiz-answer="a">a. ASS</li>
@@ -39,7 +39,7 @@
     <li class="quiz-answer" data-quiz-answer="c">c. ASA</li>
     <li class="quiz-answer" data-quiz-answer="d">d. CSS</li>
   </ul>
-  
+
   <h2 class="quiz-question">Q6: How do you spell "JavaScript"?</h2>
   <ul data-quiz-question="6">
     <li class="quiz-answer" data-quiz-answer="a">a. ScriptJava</li>
