--- a/quizpage1.html
+++ b/quizpage1.html
@@ -11,9 +11,8 @@
     <div class="quiz">
       <h2 class="quiz-question">Q1: Are you introverted of extroverted?</h2>
       <ul data-quiz-question="1">
-        <a href="http://www.google.com">Google</a>
-        <li class="quiz-answer" data-quiz-answer="a">a. IN</li>
-        <li class="quiz-answer" data-quiz-answer="b">b. EX</li>
+        <a href="http://www.google.com">a. IN</a>
+        <a href="http://www.google.com">a. EX</a>
 
       </ul>
 
