--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('first parallax.jpg');
+    background-image: url('github.com/BrokenJellyfish/brokenjellyfish.github.io/blob/master/first%20parallax.jpg');
     min-height: 100%;
 }
 
