--- a/quizpage1.html
+++ b/quizpage1.html
@@ -8,16 +8,21 @@
     </head>
   <body>
 
-    <div class="quiz">
-      <h2 class="quiz-question">Q1: Are you introverted of extroverted?</h2>
-      <ul data-quiz-question="1">
-        <a href="http://www.google.com">a. IN</a>
-        <a href="http://www.google.com">a. EX</a>
+    <h2 class="quiz-question">Q1: Are you introverted of extroverted?</h2>
 
-      </ul>
+    <div class="col-sm-4">
+        <img src='images/person.jpg'>
+      <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
+      <small>Mr Smith, Professional sandwich taster</small>
+      <a href="http://www.google.com">a. IN</a>
+    </div>
+    <div class="col-sm-4">
+      <img src='images/person.jpg'>
+      <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
+      <small>Miss McAdam, CEO Workplace Analytics</small>
+      <a href="http://www.google.com">a. EX</a>
+  </div>
 
-
-    </script>
   </body>
 
 </html>
