--- a/quizpage1.html
+++ b/quizpage1.html
@@ -24,9 +24,9 @@
     <h2 class="quiz-question">Q1: Are you introverted or extroverted?</h2>
 
   <div class="row">
-  <div class="column1"></div>
+  <div class="column"></div>
   <a href="http://www.google.com">a. IN</a>
-  <div class="column2"></div>
+  <div class="column"></div>
   <a href="http://www.google.com">a. EX</a>
 </div>
 
