--- a/quizpage1.html
+++ b/quizpage1.html
@@ -1,35 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Round 1</title>
-    <link rel="stylesheet" href="style.css">
-    <style media="screen">
-    .column {
-        float: left;
-        width: 50%;
-    }
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
 
-    /* Clear floats after the columns */
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-    </style>
+.body{
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+}
+.row1 {
+  background-size: 100%;
+  background-image:url("jellyfishquestionbar.jpg");
+  padding:0px;
+  margin:0px;
+  border:0px;
 
-    </head>
-  <body>
+}
+.column {
+    position:absolute;
+    top:100px;
+    bottom:0;
+    width:50%;
+    background-size:cover;
+}
+.left {
+    left:0;
+    background-image:url(lake.jpg);
+}
+.right {
+    right:0;
+    background-image:url(sun.jpg);
+}
 
-    <h2 class="quiz-question">Q1: Are you introverted or extroverted?</h2>
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
 
-  <div class="row">
-  <div class="column"></div>
-  <a href="http://www.google.com">a. IN</a>
-  <div class="column"></div>
-  <a href="http://www.google.com">a. EX</a>
+.row1 {
+  text-align: center;
+  font-family: "Lato", sans-serif;
+
+
+.row2 {
+    height: 90%;
+    content: "";
+    display: table;
+    clear: both;
+
+}
+
+
+</style>
+</head>
+<body>
+
+
+
+<div class="row1">
+  <br>
+  <h1>Are you extroverted?</h1>
+  <br><br>
 </div>
 
-  </body>
+<div class="row2">
+  <div class="column left">
+    <h3><a href="http://www.google.com">a. IN</a></h3>
+  </div>
+  <div class="column right">
+    <h4><a href="http://www.google.com">a. EX</a></h4>
+  </div>
+</div>
 
+
+</body>
 </html>
