--- a/quizpage1.html
+++ b/quizpage1.html
@@ -11,7 +11,6 @@
 }
 .row1 {
   background-size: 100%;
-  background-image:url("jellyfishquestionbar.jpg");
   padding:0px;
   margin:0px;
   border:0px;
@@ -56,7 +55,7 @@
 
 </style>
 </head>
-<body>
+<body background="jellyfishbandw.jpg">
 
 
 
