--- a/quizpage1.html
+++ b/quizpage1.html
@@ -28,6 +28,7 @@
     width:50%;
     background-size:cover;
 }
+
 .left {
     left:0;
     background-image:url(lake.jpg);
@@ -43,7 +44,11 @@
     font-size: 30px;
     font-family: "Lato", sans-serif;
     color: white;
+    display: block;
+    }
 }
+}
+
 /* Create two equal columns that floats next to each other */
 .column {
     float: left;
@@ -78,8 +83,6 @@
   <a class="column left" href="http://www.google.com" title="A lake" id="lake">Introverted</a>
   <a class="column right" href="http://www.google.com" title="A sun" id="sun">Extroverted</a>
 </div>
-
-
 
 </body>
 </html>
