--- a/quizpage1.html
+++ b/quizpage1.html
@@ -75,7 +75,7 @@
 
 <div class="row1">
   <br>
-  <h1>Are you extroverted?</h1>
+  <h1>Are you extroverted or introverted?</h1>
   <br><br>
 </div>
 
