--- a/quizpage1.html
+++ b/quizpage1.html
@@ -31,7 +31,7 @@
 
 .left {
     left:0;
-    background-image:url(lake.jpg);
+    background-image:url(introvert.jpg);
     text-align:center;
     font-size: 30px;
     font-family: "Lato", sans-serif;
