Update and rename quizpage1.html to In or Ex.html

--- a/In or Ex.html
+++ b/In or Ex.html
@@ -84,7 +84,7 @@ a:link {
 
   <div class="row1">
     <br>
-    <h1>Are you extroverted?</h1>
+    <h1>Introvert or Extrovert?</h1>
     <br><br>
   </div>
 
