Update and rename In or Ex.html to Round 1 a.html

--- a/Round 1 a.html
+++ b/Round 1 a.html
@@ -78,6 +78,8 @@ a:link {
 
 </style>
 </head>
+
+<title>Round 1</title>
 <body background="jellyfishagain.jpg">
 
 <div class="container container-fluid">
