--- a/round2a.html
+++ b/round2a.html
@@ -65,7 +65,7 @@
     clear: both;
     text-align: center;
     font-family: "Lato", sans-serif;
-    color: white;
+    color: black;
     letter-spacing: 10px;
 }
 a:link {
