--- a/round1.html
+++ b/round1.html
@@ -92,7 +92,7 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="http://www.google.com" title="A lake" id="lake"><br>Introverted</h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/round2a" title="A lake" id="lake"><br>Introverted</h1></a>
     </div>
     <div class="col-xm-6">
       <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Extroverted</a>
