--- a/round3a.html
+++ b/round3a.html
@@ -39,7 +39,7 @@
     }
 .right {
     right:0;
-    background-image:url(mountain.jpg);
+    background-image:url(mountains.jpg);
     text-align:center;
     font-size: 30px;
     font-family: "Lato", sans-serif;
@@ -87,10 +87,10 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="https://brokenjellyfish.github.io/round2a" title="A lake" id="lake"><br>Introverted</h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/round2a" title="A lake" id="lake"><br>Beach</h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Extroverted</a>
+      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Mountains</a>
     </div>
 
   </div>
