--- a/round2a.html
+++ b/round2a.html
@@ -87,10 +87,10 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="http://www.google.com" title="A lake" id="lake"><br>Cat</h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/round3a" title="A Cat" id="cat"><br>Cat</h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Dog</a>
+      <a class="column right" href="http://www.google.com" title="A dog" id="dog"><br>Dog</a>
     </div>
 
   </div>
