--- a/round3b.html
+++ b/round3b.html
@@ -31,7 +31,7 @@
 }
 .left {
     left:0;
-    background-image:url(beach.jpg);
+    background-image:url(slowtolike.jpg);
     text-align:center;
     font-size: 30px;
     font-family: "Lato", sans-serif;
@@ -39,7 +39,7 @@
     }
 .right {
     right:0;
-    background-image:url(mountains.jpg);
+    background-image:url(quicktolike.jpg);
     text-align:center;
     font-size: 30px;
     font-family: "Lato", sans-serif;
@@ -81,16 +81,16 @@ a:link {
 
   <div class="row1">
     <br>
-    <h1>Beach or mountains</h1>
+    <h1>Do people like you when they first meet you or does it take some time?</h1>
     <br><br>
   </div>
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="https://brokenjellyfish.github.io/round4a" title="A lake" id="lake"><br>Beach</h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/round4c" title="A lake" id="lake"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Mountains</a>
+      <a class="column right" href="https://brokenjellyfish.github.io/round4d" title="A sun" id="sun"><br></a>
     </div>
 
   </div>
