--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body, html {
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
     </a>
-  </div>
+      </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
@@ -80,6 +80,12 @@ body, html {
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><span class="w3-hide-small">THE</span> DAGGRS-JFish <span class="w3-hide-small">TEST</span></span>
+<h3> <a href="https://brokenjellyfish.github.io/quizpage1">Take It</a></h3>
+<style media="screen">
+  h3{
+    text-align: center;
+  }
+</style>
   </div>
 </div>
 
@@ -91,16 +97,16 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-group w3-margin-right"></i>Who are we?</b></p><br>
-      <img src="who are we jellyfish.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" width="500" height="333">
+      <img src="who are we jellyfish.jpg" title="Daisy Rain Smith and Gergana Georgieva Atanasova"class=" w3-round w3-image" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      <p><em><b>The Broken Jellyfish.</b></em><p></p> Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
         dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia.</p>
-        <img src="daggrs.png" class="w3-round w3-image" width="500" height="300">
+
     </div>
-<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 
 
 <!-- Second Parallax Image with Portfolio Text -->
