--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body, html {
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><span class="w3-hide-small">THE</span> DAGGRS-JFish <span class="w3-hide-small">TEST</span></span>
-<h3> <a href="https://brokenjellyfish.github.io/quizpage1">Take It</a></h3>
+<h3> <a href="https://brokenjellyfish.github.io/round1">Take It</a></h3>
 <style media="screen">
   h3{
     text-align: center;
