--- a/round2a.html
+++ b/round2a.html
@@ -90,7 +90,7 @@ a:link {
         <a class="column left" href="https://brokenjellyfish.github.io/round3a" title="A Cat" id="cat"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A dog" id="dog"><br></a>
+      <a class="column right" href="https://brokenjellyfish.github.io/round3b" title="A dog" id="dog"><br></a>
     </div>
 
   </div>
