--- a/round1.html
+++ b/round1.html
@@ -95,7 +95,7 @@ a:link {
         <a class="column left" href="https://brokenjellyfish.github.io/round2a" title="A lake" id="lake"><br>Introverted</h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br>Extroverted</a>
+      <a class="column right" href="https://brokenjellyfish.github.io/round2b" title="A sun" id="sun"><br>Extroverted</a>
     </div>
 
   </div>
