--- a/round4c.html
+++ b/round4c.html
@@ -87,10 +87,10 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="https://brokenjellyfish.github.io/round4a" title="A lake" id="lake"><br></h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/resultspage5" title="A lake" id="lake"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="http://www.google.com" title="A sun" id="sun"><br></a>
+      <a class="column right" href="https://brokenjellyfish.github.io/resultspage6" title="A sun" id="sun"><br></a>
     </div>
 
   </div>
