--- a/round4e.html
+++ b/round4e.html
@@ -87,10 +87,10 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="https://brokenjellyfish.github.io/round3a" title="A Cat" id="cat"><br></h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/resultspage9" title="A Cat" id="cat"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="https://brokenjellyfish.github.io/round3b" title="A dog" id="dog"><br></a>
+      <a class="column right" href="https://brokenjellyfish.github.io/resultspage10" title="A dog" id="dog"><br></a>
     </div>
 
   </div>
