--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p><em><b>The Broken Jellyfish.</b></em><p></p> Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia.</p>
+      <p><em><b>The Broken Jellyfish.</b></em><p></p> So, you are all probably wondering how a jellyfish can be broken. Well, the thing is that we should't judge the jellyfish based on what we know about other jellyfish. In the same manner, our test does not make any assumptions about you, based on other people's behaviour. It is absolutely unique in that way. We have developed it with a team of world-class psychologitst and scientists from some of England's top universities and we are very grateful they have helped us produce the first-of-its-kind true personality test.</p>
 
     </div>
 <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
