--- a/resultspage4.html
+++ b/resultspage4.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a Siberian TOWL!</h1>
-        <img src="siberianowltiger.jpg" width="300" height="500">
+        <img src="SiberianOwlTiger.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Siberian TOWL represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between two of the most majestic and magical animals on earth: Harry's Hedwig and the Siberain Tiger. And it makes perfect sense that you'd be a Siberian Towl if you think about it!
            You are a nocturnal animal (introvert), you are a cat person, you chose the mountains, so you live away from the sea and you would rather travel fast (flying)...So what other than a Siberian Towl could you possibly be?</h2>
