--- a/resultspage7.html
+++ b/resultspage7.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a HIPPOSNAIL!</h1>
-        <img src="hipposnail.jpg" width="300" height="500">
+        <img src="HippoSnail.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Hipposnail represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the largest and most dangerous but chill animals - the hippo - and one of the smallest and most helpless animals - the snail. And it makes perfect sense that you'd be a Hipposnail if you think about it!
            You are a nocturnal animal (introvert), you are a dog person (so you can't be a cat), most people don't like you right awa but those that do become real friends and you are laid back and relaxed, just like the...well, snail...So, what other than a Hipposnail could you possibly be?</h2>
