--- a/resultspage12.html
+++ b/resultspage12.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a MOHUAHUA!</h1>
-        <img src="chihuahuamouse.jpg" width="300" height="500">
+        <img src="ChihuahuaMouse.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Mohuahua represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the funniest (and smallest) dogs - the Chihuahua - and one tinniest animals - the mouse. And it makes perfect sense that you'd be a Mohuahua if you think about it!
            You are a diurnal animal (extrovert), you are a pet (you like houseparties), you are a dog person (so you even get to be half dog) and you are not an attacker...So, what other than a Mohuahua could you possibly be?</h2>
