--- a/resultspage11.html
+++ b/resultspage11.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a DOBERCROW!</h1>
-        <img src="doberman-crow.jpg" width="300" height="500">
+        <img src="Doberman-Crow.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Dobercrow represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the fittest dogs - the dobermann - and one othe fittest birds - the crow. And it makes perfect sense that you'd be a Dobercrow if you think about it!
            You are a diurnal animal (extrovert), you are a pet (you like houseparties), you are a dog person (so you even get to be half dog) and you are an attacker...So, what other than a Dobercrow could you possibly be?</h2>
