--- a/resultspage1.html
+++ b/resultspage1.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a SHARCAT!</h1>
-        <img src="catshark.jpg" width="300" height="500">
+        <img src="CatShark.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! Sharcat represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the most respectable predator and what has to be the fuzziest most huggable pet: the cat. And it makes perfect sense that you'd be a Sharcat if you think about it!
            You are a nocturnal animal (introvert), you are a cat person, you chose the beach, hence, you live in the ocean and quite frankly you are an attacker...So what other than a Sharcat could you possibly be?</h2>
