--- a/resultspage13.html
+++ b/resultspage13.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a DUCKHORSE!</h1>
-        <img src="duck-horse.jpg" width="300" height="500">
+        <img src="Duck-Horse.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Duckhorse represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the  ost majestic animals - the horse - and one of the silliest but cutest ones - the duck. And it makes perfect sense that you'd be a Duckhorse if you think about it!
            You are a diurnal animal (extrovert), you are normally not a pet (you like clubbing), you are sporty and you chose the veg meal...So, what other than a Duckhorse could you possibly be?</h2>
