--- a/resultspage6.html
+++ b/resultspage6.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a CHIMPHOG!</h1>
-        <img src="hedgehogmonkey.jpg" width="300" height="500">
+        <img src="HedgehogMonkey.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Chimphog represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between two of the cutest animals on earth: the baby hedgehog and a baby chimpanzee. And it makes perfect sense that you'd be a Chimphog if you think about it!
            You are a nocturnal animal (introvert), you are a dog person (so you can't be a cat), most people like you right away, just like they love elephants and koalas, and you also consider yourself immature...So, what other than a Chimphog could you possibly be?</h2>
