--- a/resultspage16.html
+++ b/resultspage16.html
@@ -34,7 +34,7 @@
   </head>
   <body>
           <h1>You are a BUTTERPHANT!</h1>
-        <img src="butterelephantfly.jpg" width="300" height="500">
+        <img src="ButterElephantFly.jpg" width="300" height="500">
          <link rel="stylesheet" type="text/css" href="style.css">
          <h2>Congratulations! The Butterphant represents one of the most mesmerizing, unique personalities (yes, this is the output for everybody else as well. WE ARE ALL UNIQUE!) for after all it is a mixture between one of the biggest and slowest animas and one of the tiniest and...well, still not very fast ones. And it makes perfect sense that you'd be a Butterphant if you think about it!
            You are a diurnal animal (extrovert), you are normally not a pet (you prefer partying outside), you aren't sporty and you are not an attacker...So, what other than a Butterphant could you possibly be?</h2>
