--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body, html {
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-center w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE WE ARE</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
+  <p class="w3-center"><em>We'd love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
