--- a/resultspage0.html
+++ b/resultspage0.html
@@ -87,10 +87,10 @@ a:link {
 
   <div class="row2">
     <div class="col-xm-6">
-        <a class="column left" href="https://brokenjellyfish.github.io/round4g" title="To the quiz" id="cat"><br></h1></a>
+        <a class="column left" href="https://brokenjellyfish.github.io/tothequiz" title="To the quiz" id="cat"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="https://brokenjellyfish.github.io/round4h" title="To Home" id="dog"><br></a>
+      <a class="column right" href="https://brokenjellyfish.github.io/trump" title="To Home" id="dog"><br></a>
     </div>
 
   </div>
