--- a/resultspage0.html
+++ b/resultspage0.html
@@ -90,7 +90,7 @@ a:link {
         <a class="column left" href="https://brokenjellyfish.github.io/tothequiz" title="To the quiz" id="cat"><br></h1></a>
     </div>
     <div class="col-xm-6">
-      <a class="column right" href="https://brokenjellyfish.github.io/trump" title="To Home" id="dog"><br></a>
+      <a class="column right" href="https://brokenjellyfish.github.io/trump" title="Surprise" id="dog"><br></a>
     </div>
 
   </div>
