--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {
 </style>
     
 <head>
-  <link rel="image_src">
+  <link rel="image_src" href="second parallax.jpg" />
 </head>
     
 <body>
