--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>We Are All Just Broken Jellyfish</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="image_src" href="https://brokenjellyfish.github.io/who%20are%20we%20jellyfish.jpg"/>
+<meta propery="og:image"content="second parallax.jpg"/>
+  
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
